--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/bms?createTableIfNotExists=true
 
 spring.datasource.username=root
-spring.datasource.password=Nikhil1
+spring.datasource.password=Prashant@1
 
 spring.jpa.hibernate.ddl-auto=update
 
